# aeordb

./: .gitignore  .mcp.json  CHANGELOG-for-client.md  Cargo.toml  LICENSE-BSL.md  README.md  SESSION.md  TODO.md  aeordb.example.toml  rustfmt.toml  xenocept-client-corruption-report-2026-05-03.md
aeordb-cli/: Cargo.toml
aeordb-cli/spec/: config_spec.rs  crash_inject_spec.rs  emergency_reset_spec.rs  probe_spec.rs  stress_spec.rs  tls_spec.rs
aeordb-cli/src/: config.rs  main.rs  utils.rs
aeordb-cli/src/commands/: diff.rs  emergency_reset.rs  export.rs  gc.rs  import_cmd.rs  mod.rs  probe.rs  promote.rs  start.rs  stress.rs  verify.rs
aeordb-lib/: Cargo.toml  build.rs
aeordb-lib/benches/: gc_investigate.rs  stress_benchmark.rs
aeordb-lib/spec/auth/: api_key_spec.rs  auth_middleware_spec.rs  auth_provider_spec.rs  jwt_spec.rs  magic_link_spec.rs  refresh_spec.rs
aeordb-lib/spec/chunks/: chunk_header_spec.rs  chunk_store_spec.rs  hash_map_spec.rs  version_store_spec.rs
aeordb-lib/spec/engine/: aggregation_spec.rs  api_key_cache_spec.rs  api_key_rules_spec.rs  append_writer_spec.rs  backup_diff_spec.rs  backup_export_spec.rs  backup_header_spec.rs  backup_import_spec.rs  backup_task_spec.rs  btree_directory_spec.rs  btree_spec.rs  cache_and_hardlinks_spec.rs  cleanup_spec.rs  cluster_join_spec.rs  compression_spec.rs  conflict_store_spec.rs  content_addressed_file_spec.rs  content_hash_spec.rs  content_type_spec.rs  converter_spec.rs  corruption_hardening_spec.rs  cron_scheduler_spec.rs  cron_spec.rs  cross_restart_spec.rs  default_plugins_spec.rs  deletion_record_spec.rs  directory_listing_spec.rs  directory_ops_spec.rs  disk_kv_store_spec.rs  e2e_parser_spec.rs  email_notification_spec.rs  engine_chunk_storage_spec.rs  engine_counters_spec.rs  entry_format_spec.rs  entry_header_spec.rs  error_display_spec.rs  event_bus_spec.rs  event_emission_spec.rs  explain_engine_spec.rs  file_lock_spec.rs  (+65 more)
aeordb-lib/spec/filesystem/: directory_entry_spec.rs  index_entry_spec.rs  path_resolver_spec.rs  redb_directory_spec.rs  version_manager_spec.rs
aeordb-lib/spec/fixtures/: test_native_plugin.rs
aeordb-lib/spec/http/: admin_spec.rs  aggregation_http_spec.rs  api_key_filtering_spec.rs  api_key_scoped_http_spec.rs  api_key_self_service_spec.rs  backup_http_spec.rs  cleanup_http_spec.rs  client_sync_spec.rs  cluster_http_spec.rs  conflict_http_spec.rs  cors_spec.rs  directory_listing_http_spec.rs  download_spec.rs  engine_http_spec.rs  explain_spec.rs  filesystem_http_spec.rs  fuzzy_http_spec.rs  gc_http_spec.rs  global_search_http_spec.rs  merge_patch_http_spec.rs  permission_scenarios_spec.rs  plugin_deploy_spec.rs  portal_spec.rs  projection_spec.rs  query_http_spec.rs  query_pagination_http_spec.rs  rename_http_spec.rs  replication_e2e_spec.rs  routes_coverage_spec.rs  server_spec.rs  sse_spec.rs  symlink_http_spec.rs  sync_http_spec.rs  system_access_spec.rs  task_http_spec.rs  upload_commit_spec.rs  upload_e2e_spec.rs  upload_spec.rs  version_file_history_spec.rs  version_file_restore_spec.rs  (+1 more)
aeordb-lib/spec/indexing/: scalar_ratio_spec.rs
aeordb-lib/spec/logging/: logging_spec.rs
aeordb-lib/spec/metrics/: metrics_spec.rs
aeordb-lib/spec/plugins/: native_runtime_spec.rs  plugin_manager_spec.rs  rules_spec.rs  scoping_spec.rs  types_spec.rs  wasm_runtime_spec.rs
aeordb-lib/spec/replication/: raft_spec.rs
aeordb-lib/spec/storage/: redb_wrapper_spec.rs
aeordb-lib/src/: lib.rs
aeordb-lib/src/auth/: api_key.rs  auth_uri.rs  jwt.rs  magic_link.rs  middleware.rs  mod.rs  permission_middleware.rs  provider.rs  rate_limiter.rs  refresh.rs
aeordb-lib/src/engine/: api_key_cache.rs  api_key_rules.rs  append_writer.rs  auto_heal.rs  backup.rs  batch_commit.rs  binary_utils.rs  btree.rs  cache.rs  cache_loaders.rs  cluster_join.rs  compression.rs  conflict_store.rs  content_type.rs  cron_scheduler.rs  deletion_record.rs  directory_entry.rs  directory_listing.rs  directory_ops.rs  disk_kv_store.rs  durability.rs  email_config.rs  email_sender.rs  email_template.rs  emergency_spill.rs  engine_chunk_storage.rs  engine_counters.rs  engine_event.rs  entry_header.rs  entry_scanner.rs  entry_type.rs  errors.rs  event_bus.rs  file_header.rs  file_record.rs  fuzzy.rs  gc.rs  grants_index.rs  group.rs  group_cache.rs  (+61 more)
aeordb-lib/src/engine/native_parsers/: audio.rs  exif.rs  html.rs  image.rs  mod.rs  msoffice.rs  odf.rs  pdf.rs  text.rs  (+1 more)
aeordb-lib/src/filesystem/: btree_node.rs  directory_entry.rs  file_ops.rs  index_entry.rs  mod.rs  path_resolver.rs  redb_directory.rs  version_manager.rs
aeordb-lib/src/indexing/: index_manager.rs  mod.rs  offset_table.rs  scalar_index.rs  scalar_mapping.rs
aeordb-lib/src/logging/: config.rs  mod.rs  request_id.rs
aeordb-lib/src/metrics/: definitions.rs  http_metrics_layer.rs  mod.rs
aeordb-lib/src/plugins/: mod.rs  native_runtime.rs  plugin_manager.rs  rule_engine.rs  scoping.rs  types.rs  wasm_runtime.rs
aeordb-lib/src/portal/: aeor  app.mjs  dashboard.mjs  files.mjs  groups.mjs  index.html  keys.mjs  metrics.mjs  settings.mjs  shared  snapshots.mjs  users.mjs
aeordb-lib/src/replication/: log_store.rs  mod.rs  network.rs  raft_node.rs  state_machine.rs  types.rs
aeordb-lib/src/server/: admin_routes.rs  api_key_self_service_routes.rs  backup_routes.rs  blocking.rs  cache_invalidation.rs  cluster_routes.rs  conflict_routes.rs  cors.rs  docs_routes.rs  download_routes.rs  engine_routes.rs  fetch_routes.rs  gc_routes.rs  json_merge_patch.rs  mod.rs  portal_routes.rs  responses.rs  route_permissions.rs  routes.rs  search_locators.rs  settings_routes.rs  share_link_routes.rs  share_routes.rs  sse_routes.rs  state.rs  symlink_routes.rs  sync_routes.rs  task_routes.rs  upload_routes.rs  version_file_routes.rs  version_routes.rs
aeordb-lib/src/storage/: chunk.rs  chunk_config.rs  chunk_header.rs  chunk_storage.rs  chunk_store.rs  document.rs  hash_map_store.rs  in_memory_chunk_storage.rs  mod.rs  redb_backend.rs  redb_chunk_storage.rs  version_storage.rs
aeordb-plugins/jq-plugin/: Cargo.toml
aeordb-plugins/jq-plugin/src/: lib.rs
(+197 files in other folders)
