[workspace]
members = [
    "aeordb-lib",
    "aeordb-cli",
    "aeordb-plugin-sdk",
    "aeordb-parsers/plaintext",
]
exclude = [
    "aeordb-plugins/echo-plugin",
]
resolver = "2"

[workspace.package]
version = "0.9.5"
edition = "2021"
license-file = "LICENSE-BSL.md"
repository = "https://github.com/th317erd/aeordb"

[workspace.lints.clippy]
# `3.14` is a recognizable-but-not-PI representative float used in tests. Clippy
# defaults `approx_constant` to deny because it confuses the literal with
# std::f64::consts::PI; for our test corpus that's a false positive.
approx_constant = "allow"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
