[package]
name = "aeordb-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aeordb = { path = "../aeordb-lib" }
axum = "0.8"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
rand = "0.8"
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util", "macros"] }

[[test]]
name = "stress_spec"
path = "spec/stress_spec.rs"

[[test]]
name = "emergency_reset_spec"
path = "spec/emergency_reset_spec.rs"
