[package]
name = "aeordb"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# HTTP server
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = "1"

# Async runtime
tokio = { workspace = true }

# Storage
blake3 = "1"
hex = "0.4"
redb = "3.1"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Authentication
jsonwebtoken = "9"
argon2 = "0.5"
ed25519-dalek = { version = "2", features = ["rand_core", "pkcs8"] }
rand = "0.8"
sha2 = "0.10"

# Plugins
wasmi = "0.42"
libloading = "0.8"

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Streaming
futures-util = "0.3"
http-body = "1"

# Replication / Consensus
openraft = { version = "0.10.0-alpha.17", features = ["serde"] }

# Common
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
futures-util = "0.3"
http-body-util = "0.1"
openraft = { version = "0.10.0-alpha.17", features = ["serde"] }
redb = "3.1"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
serial_test = "3"
tempfile = "3"
tokio = { workspace = true, features = ["test-util", "macros"] }
wat = "1"

[[test]]
name = "storage_spec"
path = "spec/storage/redb_wrapper_spec.rs"

[[test]]
name = "http_spec"
path = "spec/http/server_spec.rs"

[[test]]
name = "jwt_spec"
path = "spec/auth/jwt_spec.rs"

[[test]]
name = "api_key_spec"
path = "spec/auth/api_key_spec.rs"

[[test]]
name = "auth_middleware_spec"
path = "spec/auth/auth_middleware_spec.rs"

[[test]]
name = "wasm_runtime_spec"
path = "spec/plugins/wasm_runtime_spec.rs"

[[test]]
name = "plugin_manager_spec"
path = "spec/plugins/plugin_manager_spec.rs"

[[test]]
name = "native_runtime_spec"
path = "spec/plugins/native_runtime_spec.rs"

[[test]]
name = "plugin_deploy_spec"
path = "spec/http/plugin_deploy_spec.rs"

[[test]]
name = "magic_link_spec"
path = "spec/auth/magic_link_spec.rs"

[[test]]
name = "refresh_spec"
path = "spec/auth/refresh_spec.rs"

[[test]]
name = "scoping_spec"
path = "spec/plugins/scoping_spec.rs"

[[test]]
name = "rules_spec"
path = "spec/plugins/rules_spec.rs"

[[test]]
name = "chunk_store_spec"
path = "spec/chunks/chunk_store_spec.rs"

[[test]]
name = "hash_map_spec"
path = "spec/chunks/hash_map_spec.rs"

[[test]]
name = "chunk_header_spec"
path = "spec/chunks/chunk_header_spec.rs"

[[test]]
name = "scalar_ratio_spec"
path = "spec/indexing/scalar_ratio_spec.rs"

[[test]]
name = "raft_spec"
path = "spec/replication/raft_spec.rs"

[[test]]
name = "directory_entry_spec"
path = "spec/filesystem/directory_entry_spec.rs"

[[test]]
name = "redb_directory_spec"
path = "spec/filesystem/redb_directory_spec.rs"

[[test]]
name = "version_manager_spec"
path = "spec/filesystem/version_manager_spec.rs"

[[test]]
name = "path_resolver_spec"
path = "spec/filesystem/path_resolver_spec.rs"

[[test]]
name = "filesystem_http_spec"
path = "spec/http/filesystem_http_spec.rs"

[[test]]
name = "metrics_spec"
path = "spec/metrics/metrics_spec.rs"

[[test]]
name = "logging_spec"
path = "spec/logging/logging_spec.rs"
