[package]
name = "aeordb"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# HTTP server
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = "1"

# Async runtime
tokio = { workspace = true }

# Storage
blake3 = "1"
hex = "0.4"
zstd = "0.13"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Authentication
jsonwebtoken = "9"
argon2 = "0.5"
ed25519-dalek = { version = "2", features = ["rand_core", "pkcs8"] }
rand = "0.8"
sha2 = "0.10"

# Plugins
wasmi = "0.42"
libloading = "0.8"

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Streaming
futures-util = "0.3"
http-body = "1"

# Replication / Consensus
openraft = { version = "0.10.0-alpha.17", features = ["serde"] }

# Common
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile = "3"
thiserror = { workspace = true }

[dev-dependencies]
futures-util = "0.3"
http-body-util = "0.1"
openraft = { version = "0.10.0-alpha.17", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
serial_test = "3"
tempfile = "3"
tokio = { workspace = true, features = ["test-util", "macros"] }
wat = "1"

[[test]]
name = "jwt_spec"
path = "spec/auth/jwt_spec.rs"

[[test]]
name = "api_key_spec"
path = "spec/auth/api_key_spec.rs"

[[test]]
name = "auth_middleware_spec"
path = "spec/auth/auth_middleware_spec.rs"

[[test]]
name = "wasm_runtime_spec"
path = "spec/plugins/wasm_runtime_spec.rs"

[[test]]
name = "plugin_manager_spec"
path = "spec/plugins/plugin_manager_spec.rs"

[[test]]
name = "native_runtime_spec"
path = "spec/plugins/native_runtime_spec.rs"

[[test]]
name = "plugin_deploy_spec"
path = "spec/http/plugin_deploy_spec.rs"

[[test]]
name = "magic_link_spec"
path = "spec/auth/magic_link_spec.rs"

[[test]]
name = "refresh_spec"
path = "spec/auth/refresh_spec.rs"

[[test]]
name = "scoping_spec"
path = "spec/plugins/scoping_spec.rs"

[[test]]
name = "rules_spec"
path = "spec/plugins/rules_spec.rs"

[[test]]
name = "chunk_header_spec"
path = "spec/chunks/chunk_header_spec.rs"

[[test]]
name = "raft_spec"
path = "spec/replication/raft_spec.rs"

[[test]]
name = "metrics_spec"
path = "spec/metrics/metrics_spec.rs"

[[test]]
name = "logging_spec"
path = "spec/logging/logging_spec.rs"

[[test]]
name = "entry_format_spec"
path = "spec/engine/entry_format_spec.rs"

[[test]]
name = "append_writer_spec"
path = "spec/engine/append_writer_spec.rs"

[[test]]
name = "records_spec"
path = "spec/engine/records_spec.rs"

[[test]]
name = "converter_spec"
path = "spec/engine/converter_spec.rs"

[[test]]
name = "nvt_spec"
path = "spec/engine/nvt_spec.rs"

[[test]]
name = "kv_store_spec"
path = "spec/engine/kv_store_spec.rs"

[[test]]
name = "kv_resize_spec"
path = "spec/engine/kv_resize_spec.rs"

[[test]]
name = "void_manager_spec"
path = "spec/engine/void_manager_spec.rs"

[[test]]
name = "engine_chunk_storage_spec"
path = "spec/engine/engine_chunk_storage_spec.rs"

[[test]]
name = "directory_ops_spec"
path = "spec/engine/directory_ops_spec.rs"

[[test]]
name = "versioning_spec"
path = "spec/engine/versioning_spec.rs"

[[test]]
name = "engine_http_spec"
path = "spec/http/engine_http_spec.rs"

[[test]]
name = "index_store_spec"
path = "spec/engine/index_store_spec.rs"

[[test]]
name = "write_pipeline_spec"
path = "spec/engine/write_pipeline_spec.rs"

[[test]]
name = "query_engine_spec"
path = "spec/engine/query_engine_spec.rs"

[[test]]
name = "query_http_spec"
path = "spec/http/query_http_spec.rs"

[[test]]
name = "wasm_converter_spec"
path = "spec/engine/wasm_converter_spec.rs"

[[test]]
name = "routes_coverage_spec"
path = "spec/http/routes_coverage_spec.rs"

[[test]]
name = "plugin_types_spec"
path = "spec/plugins/types_spec.rs"

[[test]]
name = "error_display_spec"
path = "spec/engine/error_display_spec.rs"

[[test]]
name = "nvt_ops_spec"
path = "spec/engine/nvt_ops_spec.rs"

[[test]]
name = "user_spec"
path = "spec/engine/user_spec.rs"

[[test]]
name = "group_spec"
path = "spec/engine/group_spec.rs"

[[test]]
name = "permissions_spec"
path = "spec/engine/permissions_spec.rs"

[[test]]
name = "admin_spec"
path = "spec/http/admin_spec.rs"

[[test]]
name = "permission_scenarios_spec"
path = "spec/http/permission_scenarios_spec.rs"

[[test]]
name = "auth_provider_spec"
path = "spec/auth/auth_provider_spec.rs"

[[test]]
name = "compression_spec"
path = "spec/engine/compression_spec.rs"

[[test]]
name = "multi_index_spec"
path = "spec/engine/multi_index_spec.rs"

[[test]]
name = "portal_spec"
path = "spec/http/portal_spec.rs"
