[package]
name = "aeordb"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
autobenches = false

[dependencies]
# File locking
fs2 = "0.4"

# HTTP server
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = "1"

# Async runtime
tokio = { workspace = true }

# Storage
blake3 = "1"
hex = "0.4"
zstd = "0.13"
arc-swap = "1"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
base64 = "0.22"

# Authentication
jsonwebtoken = "9"
argon2 = "0.5"
ed25519-dalek = { version = "2", features = ["rand_core", "pkcs8"] }
rand = "0.8"
sha2 = "0.10"

# Plugins
wasmi = "0.42"
libloading = "0.8"
aeordb-plugin-sdk = { path = "../aeordb-plugin-sdk" }

# Webhook delivery
reqwest = { version = "0.12", features = ["json"] }
hmac = "0.12"

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Graceful shutdown
tokio-util = "0.7"

# Streaming
futures-util = "0.3"
http-body = "1"
tokio-stream = { version = "0.1", features = ["sync"] }

# Content-type detection
file-format = "0.29"

# ZIP archive reading (for native Office/ODF parsers)
zip = { version = "2", default-features = false, features = ["deflate"] }

# Glob matching
glob-match = "0.2"

# Task scheduling
cron = "0.13"

# System-level info (disk stats)
libc = "0.2"

# Common
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile = "3"
thiserror = { workspace = true }

[dev-dependencies]
futures-util = "0.3"
zip = { version = "2", default-features = false, features = ["deflate"] }
tokio-util = "0.7"
http-body-util = "0.1"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
serial_test = "3"
tempfile = "3"
tokio = { workspace = true, features = ["test-util", "macros"] }
wat = "1"

[[test]]
name = "jwt_spec"
path = "spec/auth/jwt_spec.rs"

[[test]]
name = "api_key_spec"
path = "spec/auth/api_key_spec.rs"

[[test]]
name = "auth_middleware_spec"
path = "spec/auth/auth_middleware_spec.rs"

[[test]]
name = "wasm_runtime_spec"
path = "spec/plugins/wasm_runtime_spec.rs"

[[test]]
name = "plugin_manager_spec"
path = "spec/plugins/plugin_manager_spec.rs"

[[test]]
name = "native_runtime_spec"
path = "spec/plugins/native_runtime_spec.rs"

[[test]]
name = "plugin_deploy_spec"
path = "spec/http/plugin_deploy_spec.rs"

[[test]]
name = "magic_link_spec"
path = "spec/auth/magic_link_spec.rs"

[[test]]
name = "refresh_spec"
path = "spec/auth/refresh_spec.rs"

[[test]]
name = "scoping_spec"
path = "spec/plugins/scoping_spec.rs"

[[test]]
name = "rules_spec"
path = "spec/plugins/rules_spec.rs"

[[test]]
name = "metrics_spec"
path = "spec/metrics/metrics_spec.rs"

[[test]]
name = "logging_spec"
path = "spec/logging/logging_spec.rs"

[[test]]
name = "entry_format_spec"
path = "spec/engine/entry_format_spec.rs"

[[test]]
name = "append_writer_spec"
path = "spec/engine/append_writer_spec.rs"

[[test]]
name = "records_spec"
path = "spec/engine/records_spec.rs"

[[test]]
name = "converter_spec"
path = "spec/engine/converter_spec.rs"

[[test]]
name = "nvt_spec"
path = "spec/engine/nvt_spec.rs"

[[test]]
name = "kv_store_spec"
path = "spec/engine/kv_store_spec.rs"

[[test]]
name = "kv_resize_spec"
path = "spec/engine/kv_resize_spec.rs"

[[test]]
name = "void_manager_spec"
path = "spec/engine/void_manager_spec.rs"

[[test]]
name = "directory_ops_spec"
path = "spec/engine/directory_ops_spec.rs"

[[test]]
name = "versioning_spec"
path = "spec/engine/versioning_spec.rs"

[[test]]
name = "file_lock_spec"
path = "spec/engine/file_lock_spec.rs"

[[test]]
name = "download_spec"
path = "spec/http/download_spec.rs"

[[test]]
name = "engine_http_spec"
path = "spec/http/engine_http_spec.rs"

[[test]]
name = "index_store_spec"
path = "spec/engine/index_store_spec.rs"

[[test]]
name = "write_pipeline_spec"
path = "spec/engine/write_pipeline_spec.rs"

[[test]]
name = "query_engine_spec"
path = "spec/engine/query_engine_spec.rs"

[[test]]
name = "query_http_spec"
path = "spec/http/query_http_spec.rs"

[[test]]
name = "routes_coverage_spec"
path = "spec/http/routes_coverage_spec.rs"

[[test]]
name = "plugin_types_spec"
path = "spec/plugins/types_spec.rs"

[[test]]
name = "error_display_spec"
path = "spec/engine/error_display_spec.rs"

[[test]]
name = "nvt_ops_spec"
path = "spec/engine/nvt_ops_spec.rs"

[[test]]
name = "user_spec"
path = "spec/engine/user_spec.rs"

[[test]]
name = "group_spec"
path = "spec/engine/group_spec.rs"

[[test]]
name = "permissions_spec"
path = "spec/engine/permissions_spec.rs"

[[test]]
name = "admin_spec"
path = "spec/http/admin_spec.rs"

[[test]]
name = "permission_scenarios_spec"
path = "spec/http/permission_scenarios_spec.rs"

[[test]]
name = "auth_provider_spec"
path = "spec/auth/auth_provider_spec.rs"

[[test]]
name = "compression_spec"
path = "spec/engine/compression_spec.rs"

[[test]]
name = "multi_index_spec"
path = "spec/engine/multi_index_spec.rs"

[[test]]
name = "portal_spec"
path = "spec/http/portal_spec.rs"

[[test]]
name = "trigram_spec"
path = "spec/engine/trigram_spec.rs"

[[test]]
name = "phonetic_spec"
path = "spec/engine/phonetic_spec.rs"

[[test]]
name = "fuzzy_scoring_spec"
path = "spec/engine/fuzzy_scoring_spec.rs"

[[test]]
name = "fuzzy_http_spec"
path = "spec/http/fuzzy_http_spec.rs"

[[test]]
name = "source_resolver_spec"
path = "spec/engine/source_resolver_spec.rs"

[[test]]
name = "pipeline_spec"
path = "spec/engine/pipeline_spec.rs"

[[test]]
name = "parser_integration_spec"
path = "spec/engine/parser_integration_spec.rs"

[[test]]
name = "e2e_parser_spec"
path = "spec/engine/e2e_parser_spec.rs"

[[test]]
name = "index_values_spec"
path = "spec/engine/index_values_spec.rs"

[[test]]
name = "backup_header_spec"
path = "spec/engine/backup_header_spec.rs"

[[test]]
name = "tree_walker_spec"
path = "spec/engine/tree_walker_spec.rs"

[[test]]
name = "backup_export_spec"
path = "spec/engine/backup_export_spec.rs"

[[test]]
name = "backup_diff_spec"
path = "spec/engine/backup_diff_spec.rs"

[[test]]
name = "content_hash_spec"
path = "spec/engine/content_hash_spec.rs"

[[test]]
name = "backup_import_spec"
path = "spec/engine/backup_import_spec.rs"

[[test]]
name = "backup_http_spec"
path = "spec/http/backup_http_spec.rs"

[[test]]
name = "cross_restart_spec"
path = "spec/engine/cross_restart_spec.rs"

[[test]]
name = "event_bus_spec"
path = "spec/engine/event_bus_spec.rs"

[[test]]
name = "event_emission_spec"
path = "spec/engine/event_emission_spec.rs"

[[test]]
name = "heartbeat_spec"
path = "spec/engine/heartbeat_spec.rs"

[[test]]
name = "metrics_pulse_spec"
path = "spec/engine/metrics_pulse_spec.rs"

[[test]]
name = "webhook_spec"
path = "spec/engine/webhook_spec.rs"

[[test]]
name = "sse_spec"
path = "spec/http/sse_spec.rs"

[[test]]
name = "timestamp_spec"
path = "spec/engine/timestamp_spec.rs"

[[test]]
name = "content_type_spec"
path = "spec/engine/content_type_spec.rs"

[[test]]
name = "query_pagination_spec"
path = "spec/engine/query_pagination_spec.rs"

[[test]]
name = "query_pagination_http_spec"
path = "spec/http/query_pagination_http_spec.rs"

[[test]]
name = "aggregation_spec"
path = "spec/engine/aggregation_spec.rs"

[[test]]
name = "aggregation_http_spec"
path = "spec/http/aggregation_http_spec.rs"

[[test]]
name = "projection_spec"
path = "spec/http/projection_spec.rs"

[[test]]
name = "explain_spec"
path = "spec/http/explain_spec.rs"

[[test]]
name = "explain_engine_spec"
path = "spec/engine/explain_engine_spec.rs"

[[test]]
name = "btree_spec"
path = "spec/engine/btree_spec.rs"

[[test]]
name = "btree_directory_spec"
path = "spec/engine/btree_directory_spec.rs"

[[test]]
name = "disk_kv_store_spec"
path = "spec/engine/disk_kv_store_spec.rs"

[[test]]
name = "kv_snapshot_spec"
path = "spec/engine/kv_snapshot_spec.rs"

[[test]]
name = "kv_concurrency_spec"
path = "spec/engine/kv_concurrency_spec.rs"

[[test]]
name = "content_addressed_file_spec"
path = "spec/engine/content_addressed_file_spec.rs"

[[test]]
name = "gc_spec"
path = "spec/engine/gc_spec.rs"

[[test]]
name = "gc_http_spec"
path = "spec/http/gc_http_spec.rs"

[[test]]
name = "upload_spec"
path = "spec/http/upload_spec.rs"

[[test]]
name = "upload_commit_spec"
path = "spec/http/upload_commit_spec.rs"

[[test]]
name = "upload_e2e_spec"
path = "spec/http/upload_e2e_spec.rs"

[[test]]
name = "wasm_query_e2e_spec"
path = "spec/engine/wasm_query_e2e_spec.rs"

[[test]]
name = "stress_test_spec"
path = "spec/engine/stress_test_spec.rs"

[[test]]
name = "cors_spec"
path = "spec/http/cors_spec.rs"

[[test]]
name = "task_queue_spec"
path = "spec/engine/task_queue_spec.rs"

[[test]]
name = "reindex_spec"
path = "spec/engine/reindex_spec.rs"

[[test]]
name = "query_operator_audit_spec"
path = "spec/engine/query_operator_audit_spec.rs"

[[test]]
name = "cron_spec"
path = "spec/engine/cron_spec.rs"

[[test]]
name = "task_http_spec"
path = "spec/http/task_http_spec.rs"

[[test]]
name = "version_access_spec"
path = "spec/engine/version_access_spec.rs"

[[test]]
name = "version_read_http_spec"
path = "spec/http/version_read_http_spec.rs"

[[test]]
name = "version_file_history_spec"
path = "spec/http/version_file_history_spec.rs"

[[test]]
name = "version_file_restore_spec"
path = "spec/http/version_file_restore_spec.rs"

[[test]]
name = "virtual_clock_spec"
path = "spec/engine/virtual_clock_spec.rs"

[[test]]
name = "peer_connection_spec"
path = "spec/engine/peer_connection_spec.rs"

[[test]]
name = "cluster_http_spec"
path = "spec/http/cluster_http_spec.rs"

[[test]]
name = "symlink_record_spec"
path = "spec/engine/symlink_record_spec.rs"

[[test]]
name = "symlink_ops_spec"
path = "spec/engine/symlink_ops_spec.rs"

[[test]]
name = "symlink_resolver_spec"
path = "spec/engine/symlink_resolver_spec.rs"

[[test]]
name = "symlink_http_spec"
path = "spec/http/symlink_http_spec.rs"

[[test]]
name = "rename_http_spec"
path = "spec/http/rename_http_spec.rs"

[[test]]
name = "symlink_ecosystem_spec"
path = "spec/engine/symlink_ecosystem_spec.rs"

[[test]]
name = "directory_listing_spec"
path = "spec/engine/directory_listing_spec.rs"

[[test]]
name = "api_key_rules_spec"
path = "spec/engine/api_key_rules_spec.rs"

[[test]]
name = "directory_listing_http_spec"
path = "spec/http/directory_listing_http_spec.rs"

[[test]]
name = "api_key_self_service_spec"
path = "spec/http/api_key_self_service_spec.rs"

[[test]]
name = "api_key_scoped_http_spec"
path = "spec/http/api_key_scoped_http_spec.rs"

[[test]]
name = "api_key_filtering_spec"
path = "spec/http/api_key_filtering_spec.rs"

[[test]]
name = "sync_http_spec"
path = "spec/http/sync_http_spec.rs"

[[test]]
name = "conflict_store_spec"
path = "spec/engine/conflict_store_spec.rs"

[[test]]
name = "conflict_http_spec"
path = "spec/http/conflict_http_spec.rs"

[[test]]
name = "merge_spec"
path = "spec/engine/merge_spec.rs"

[[test]]
name = "sync_apply_spec"
path = "spec/engine/sync_apply_spec.rs"

[[test]]
name = "sync_api_spec"
path = "spec/engine/sync_api_spec.rs"

[[test]]
name = "sync_engine_spec"
path = "spec/engine/sync_engine_spec.rs"

[[test]]
name = "cluster_join_spec"
path = "spec/engine/cluster_join_spec.rs"

[[test]]
name = "system_flag_spec"
path = "spec/engine/system_flag_spec.rs"

[[test]]
name = "system_store_spec"
path = "spec/engine/system_store_spec.rs"

[[test]]
name = "system_access_spec"
path = "spec/http/system_access_spec.rs"

[[test]]
name = "client_sync_spec"
path = "spec/http/client_sync_spec.rs"

[[test]]
name = "replication_e2e_spec"
path = "spec/http/replication_e2e_spec.rs"

[[test]]
name = "health_spec"
path = "spec/engine/health_spec.rs"

[[test]]
name = "sync_status_spec"
path = "spec/engine/sync_status_spec.rs"

[[test]]
name = "shutdown_spec"
path = "spec/engine/shutdown_spec.rs"

[[test]]
name = "cleanup_spec"
path = "spec/engine/cleanup_spec.rs"

[[test]]
name = "cleanup_http_spec"
path = "spec/http/cleanup_http_spec.rs"


[[test]]
name = "api_key_cache_spec"
path = "spec/engine/api_key_cache_spec.rs"

[[test]]
name = "entry_header_spec"
path = "spec/engine/entry_header_spec.rs"

[[test]]
name = "path_utils_spec"
path = "spec/engine/path_utils_spec.rs"

[[test]]
name = "file_record_spec"
path = "spec/engine/file_record_spec.rs"

[[test]]
name = "deletion_record_spec"
path = "spec/engine/deletion_record_spec.rs"

[[test]]
name = "cron_scheduler_spec"
path = "spec/engine/cron_scheduler_spec.rs"

[[test]]
name = "backup_task_spec"
path = "spec/engine/backup_task_spec.rs"

[[test]]
name = "rate_tracker_spec"
path = "spec/engine/rate_tracker_spec.rs"

[[test]]
name = "engine_counters_spec"
path = "spec/engine/engine_counters_spec.rs"

[[test]]
name = "native_parsers_spec"
path = "spec/engine/native_parsers_spec.rs"

[[test]]
name = "corruption_hardening_spec"
path = "spec/engine/corruption_hardening_spec.rs"

[[test]]
name = "resilience_features_spec"
path = "spec/engine/resilience_features_spec.rs"

[[test]]
name = "hot_file_transaction_spec"
path = "spec/engine/hot_file_transaction_spec.rs"

[[test]]
name = "sharing_spec"
path = "spec/engine/sharing_spec.rs"

[[bin]]
name = "stress-benchmark"
path = "benches/stress_benchmark.rs"

[[bin]]
name = "gc-investigate"
path = "benches/gc_investigate.rs"
