[package]
name = "aeordb-jq-plugin"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
aeordb-plugin-sdk = { path = "../../aeordb-plugin-sdk" }
jaq-all = { version = "0.1", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
